--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,13 @@
 
     <string name="add_report">Tambahkan Laporan</string>
 
+    <!--Profile-->
+    <string name="name">Nama</string>
+    <string name="email">Email</string>
+    <string name="user_id">User ID</string>
+    <string name="edit_profile">Ubah Profil</string>
+    <string name="logout">Keluar</string>
+
     <string name="action_settings">Settings</string>
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
