Auth and Profile Enhancement
This commit introduces several enhancements to the authentication and profile features:

- **AuthActivity:**
    - Passes user data (name, email, photo URL, UID) to MainActivity after successful login.
    - Implements `enableEdgeToEdge()` for a more immersive UI.
    - Handles theme setting based on whether the activity is launched after logout.
    - Simplifies UI update logic.

- **ProfileActivity:**
    - Displays user information (name, email, photo, UID) fetched from the intent extras.
    - Implements user logout functionality, signing out from both Firebase and Google.
    - Redirects to AuthActivity after logout.
    - Shows a confirmation dialog before logging out.
    - Updates profile image view to be circular.
    - Sets the toolbar title to "Profil Pengguna".

- **MainActivity:**
    - Passes user data to ProfileActivity when navigating to the profile screen.

- **Layouts and Styles:**
    - Updated `activity_profile.xml` to make the profile image circular.
    - Defined a new theme `Theme.App.Starting` in `themes.xml` for the splash screen.
    - Adjusted splash screen theme in `splash.xml` by removing `windowSplashScreenAnimationDuration`.
    - Updated string resources for welcome messages.
    - Set `AuthActivity` to use `Theme.App.Starting` in `AndroidManifest.xml`.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
     <string name="add_report">Tambahkan Laporan</string>
 
     <!--Onboarding-->
-    <string name="welcome">Selamat Datang</string>
-    <string name="text_welcome">Selamat Datang,</string>
+    <string name="welcome">Selamat Datang,</string>
+    <string name="text_welcome">Selamat Datang</string>
     <string name="logo_landscape">Teman Ngadu</string>
     <string name="vintage">Stop Bullying</string>
     <string name="long_auth_description">Ayo laporkan segala tindakan perundungan yang kamu alami, tidak ada tempat untuk Bullying!</string>
