Enhance security and modernize authentication flow
This commit introduces significant improvements to security, authentication, and code quality across the application.

**Key Changes:**

-   **Enhanced Google Sign-In**:
    -   The authentication flow is updated to use a nonce (`generateNonce`) during the Google Sign-In process, providing replay attack protection.
    -   Error handling for `GetCredentialException` is now more specific, distinguishing between user cancellations and other failures.
    -   `setAutoSelectEnabled` is enabled for a smoother sign-in experience.

-   **Secure Logout Process**:
    -   The logout functionality in `ProfileActivity` now uses `CredentialManager.clearCredentialState` to properly sign the user out of their Google account on the device, in addition to signing out from Firebase.

-   **WebView Security Hardening (`ArticleDetailActivity`)**:
    -   A `SecureWebViewClient` is implemented to enforce that only `https-` URLs are loaded, blocking insecure content.
    -   `allowFileAccess` and `allowContentAccess` are disabled to prevent the `WebView` from accessing the local file system.

-   **Modernization & Refactoring**:
    -   Replaced deprecated Firebase initializers (e.g., `Firebase.auth`, `Firebase.firestore`) with modern equivalents (e.g., `FirebaseAuth.getInstance()`, `FirebaseFirestore.getInstance()`).
    -   Replaced deprecated `startActivityForResult` with the `ActivityResultLauncher` API in `ReportActivity`.
    -   Unused context instances and `@SuppressLint` annotations have been removed (`HomeViewModel`).
    -   String resources are now used consistently in `HistoryAdapter` and `HistoryActivity` for better localization and maintenance.
    -   Explicitly uses `Locale.forLanguageTag("id-ID")` for date formatting to ensure consistency.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,22 @@
 
     <!--History-->
     <string name="action_history">Riwayat Laporan</string>
+    <string name="title_date_range_picker">Pilih Rentang Tanggal</string>
+    <string name="all_time">Semua Waktu</string>
+    <string-array name="history_filter_options">
+        <item>Semua Laporan</item>
+        <item>Terlapor</item>
+        <item>Ditangani</item>
+    </string-array>
+    <string name="reported_stats">Terlapor : %1$d (%2$s%%)</string>
+    <string name="handled_stats">Ditangani : %1$d (%2$s%%)</string>
+    <string name="report_date">Tanggal: %1$s</string>
+    <string name="report_location">Lokasi: %1$s</string>
+    <string name="status_reported">TERLAPOR</string>
+    <string name="status_handled">DITANGANI</string>
+    <string name="role_victim">KORBAN</string>
+    <string name="role_witness">SAKSI</string>
+
 
     <!--Detail-->
     <string name="action_detail">Rincian Laporan</string>
